2006-05-09  Carl Hetherington  <inkscape@carlh.net>

	* src/nodepath.cpp: fix silly bug with snapping node edits.  *
	src/snapper.cpp, src/snapper.h, src/sp-namedview.cpp: re-enable
	link between grid visibility and grid snap.

2006-05-08  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* conn-avoid-ref.cpp: Fix a crashbug that could occur in files
	  containing connectors if they were loaded from the file chooser
	  or from the recent file list.  Fixes bug #1458820.

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/display/curve.cpp:

	  always make local copy of path data so that we have control over memory
	  policy

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/display/curve.h, src/display/curve.cpp, src/dropper-context.cpp:

	  get rid of sp_curve_new_from_static_bpath() in a bid to simplify curve
	  memory management

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/display/canvas-bpath.cpp, src/display/curve.cpp, src/display/curve.h,
	  src/display/nr-arena-shape.cpp, src/draw-context.cpp,
	  src/extension/internal/odf.cpp, src/extension/internal/pov-out.cpp,
	  src/nodepath.cpp, src/object-snapper.cpp, src/path-chemistry.cpp,
	  src/sp-flowregion.cpp, src/splivarot.cpp, src/sp-offset.cpp,
	  src/sp-path.cpp, src/sp-shape.cpp, src/sp-spiral.cpp, src/sp-star.cpp,
	  src/sp-use-reference.cpp:

	  eliminate direct accesses to SPCurve::bpath

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/streams-zlib.cpp, src/streams-jar.cpp, src/splivarot.cpp,
	  src/extension/internal/bluredge.cpp:

	  use std::vector rather than dynamically-sized automatic arrays,
	  plus cleanups and minor fixes, and dead code removal

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/debug/demangle.cpp, src/debug/demangle.h, src/sp-object.cpp,
	  src/gc-anchored.cpp, src/debug/Makefile_insert:

	  use c++filt for symbol demangling if available

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-util.cpp:
	